<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadImovelActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtCadImovelTipoImovel"
                        android:textSize="18sp" />

                    <RadioGroup
                        android:id="@+id/rgCadImovelTipoImovel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbCadImovelCasa"
                            android:layout_width="184dp"
                            android:layout_height="wrap_content"
                            android:text="@string/rbCadImovelCasa"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/rbCadImovelApartamento"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/rbCadImovelApartamento"
                            android:textSize="18sp" />
                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="168dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtCadImovelNome"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edtCadImovelNome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="101dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtCadImovelValor"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtCadImovelMoedaValor"
                    android:textAlignment="textEnd"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edtCadImovelValor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="171dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtCadImovelQtdeQuartos"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edtCadImovelQtdeQuartos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtCadImovelBairro"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edtCadImovelBairro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="171dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtCadImovelDescricao"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edtCadImovelDescricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/switchCadImovelIsComprado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/switchCadImovelIsComprado"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imgbtnCadImovelAddFotos"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:background="@null"
                    android:onClick="launchCamera"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/cad_imovel_add_photos" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgviewCadImovel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@android:color/holo_blue_dark" />
            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="144dp">

                <ImageButton
                    android:id="@+id/imgbtnCadImovelSalvar"
                    android:layout_width="65dp"
                    android:layout_height="69dp"
                    android:layout_gravity="bottom|right"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/cad_imovel_float_button_save" />
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>